<resources>
    <string name="app_name">ZGo</string>
    <string name="google_maps_key">AIzaSyAEb2NlYEFVhA4JnVMTr0ByCND0RnwjKTo</string>
    <string name="tvWelcome">Welcome To zGo!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me ?</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="search_location">search location</string>
    <string name="travel_time">Travel Time:</string>
    <string name="direct_distance">Direct distance:</string>
</resources>
