<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blogspot.mowael.zgo.fragments.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_avatar_placeholder_large" />
        </RelativeLayout>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/account_drawable"
            android:drawablePadding="5dp"
            android:hint="@string/enter_your_username"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />


        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/tvNotifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/or" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/register" />


    </LinearLayout>

</ScrollView>
